Update pom.xml to run integration tests with Java 17