@@ -126,7 +126,7 @@
               </includes>
               <reuseForks>false</reuseForks>
               <forkCount>4</forkCount>
-              <argLine>-Xmx2g @{argLine}</argLine>
+              <argLine>-Xmx2g --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED @{argLine}</argLine>
               <reportNameSuffix>sponge_log</reportNameSuffix>
             </configuration>
           </plugin>
